--- a/1_Introduccion/1_3_Algunos_IDE/1_3_1_IDLE/1_3_1_IDLE.ipynb
+++ b/1_Introduccion/1_3_Algunos_IDE/1_3_1_IDLE/1_3_1_IDLE.ipynb
@@ -19,7 +19,7 @@
     "[1.3.1.4. Ejecutar el Código](#1.3.1.4_Ejecutar-el-Codigo)    \n",
     "[1.3.1.5. Instalación de Módulos](#1.3.1.5_Instalacion-de-Modulos)   \n",
     "\n",
-    "[1.3.2. Spyder](../1_3_2_JupyterLab/1_3_2_JupyterLab.ipynb#1.3.2_Jupyter) <!--(https://mybinder.org/Algunos-IDE/Spyder)--> "
+    "[1.3.2. Jupyter](../1_3_2_JupyterLab/1_3_2_JupyterLab.ipynb#1.3.2_Jupyter) <!--(https://mybinder.org/Algunos-IDE/Spyder)--> "
    ]
   },
   {
@@ -28,9 +28,9 @@
    "source": [
     "---\n",
     "\n",
-    "El escoger un entorno de trabajo depende de las necesidades, recursos y gustos, por ejemplo, yo empecé con IDLE y con él aprendí las bases de Python, luego me pasé a Spyder cuando tuve proyectos más grandes, sin embargo, para esta guía usé JupyterLab.  \n",
+    "El escoger un entorno de trabajo depende de las necesidades, recursos y gustos, por ejemplo, yo empecé con IDLE y con él aprendí las bases de Python, luego me pasé a Spyder cuando tuve proyectos más grandes, sin embargo, para esta guía usé JupyterLab y VS Code, y hay muchos otros que no mencionaré ya que nunca he trabajado con ellos.\n",
     "\n",
-    "A continuación, se introducirán algunos IDE, sus ventajas y desventajas para realizar los ejercicios de esta guía, sin embargo, cabe resaltar que esta es sólo una pincelada de todas sus funciones, y también que hay gran cantidad de IDE que no mencionaré ya que nunca he trabajado con ellos."
+    "A continuación, se introducirán el IDE que viene con la instalación de Python, sin embargo, cabe resaltar que esta es sólo una pincelada de todas sus funciones."
    ]
   },
   {
@@ -46,7 +46,7 @@
    "source": [
     "Una vez instalado IDLE, este se ubicará donde ustedes le indiquen en el proceso de instalación. \n",
     "\n",
-    "Al abrirlo podremos ver la ventana principal de IDLE, como se muestra en la *Figura 1*. Como pueden ver es una interfaz muy sencilla y no tiene todos los botones, opciones, ventanas divididas y otras características de los IDE más sofisticados, como veremos más adelante.\n",
+    "Al abrirlo podremos ver la ventana principal de IDLE, como se muestra en la *Figura 1*. Como pueden ver es una interfaz muy sencilla y no tiene todos los botones, opciones, ventanas divididas y otras características de los IDE más sofisticados.\n",
     "\n",
     "![Fig1_Shell_IDLE](Fig1_Shell_IDLE.jpg \"Figura 1: Ventana principal del IDLE\")\n",
     "\n",
