--- a/1_Introduccion/1_4_Instrucciones_Guia_Interactiva/1_4_Instrucciones_Guia_Interactiva.ipynb
+++ b/1_Introduccion/1_4_Instrucciones_Guia_Interactiva/1_4_Instrucciones_Guia_Interactiva.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "La guía tiene tres tipos de bloques:\n",
     "1. Texto: Bloque en markdown. (No modificar)\n",
-    "2. Ejemplos: Bloque de código. (No modificar)\n",
+    "2. Ejemplos: Bloque de código editado con markdown. (No modificar)\n",
     "3. Consolas vacías: Bloque de código. (Modificar)\n",
     "\n",
     "Todos los bloques se pueden modificar, pero no tiene sentido modificar los dos primeros, ya que, se estaría cambiando el contenido de la guía, para experimentar modificando los ejemplos, y hacer los ejercicios propuestos están las consolas vacías, que se presentan a lo largo de la guía, o ser insertadas en el notebook si se considera necesario.\n",
