--- a/1_Introduccion/1_Introduccion.ipynb
+++ b/1_Introduccion/1_Introduccion.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "La presente guía esta creada a partir de la Pequeña Guía de Python Versión 0.5, del profesor Leonardo Rivera Cadavid y usada en el curso de Implementación de algoritmos de Ingeniería industrial, en la Universidad del Valle,  Cali, Colombia, 2017.\n",
     "\n",
-    "El objetivo principal es ayudar a una rápida familiarización con el lenguaje Python, el programa de desarrollo IDLE que viene incluido con este, el administrador de paquetes Anaconda y algunas de las aplicaciones incluidas allí, con el fin de apoyar  la `*`[***Guía de implementación de algoritmos de ingeniería industrial***](https//Guia \"Ir a la Guía de implementación de algoritmos de ingeniería industrial\")`*` de la Universidad valle, Cali, Colombia. \n",
+    "El objetivo principal es ayudar a una rápida familiarización con el lenguaje Python, el programa de desarrollo IDLE que viene incluido con este, el administrador de paquetes Anaconda y algunas de las aplicaciones incluidas allí, con el fin de apoyar  la [Guía de implementación de algoritmos de ingeniería industrial](https://sites.google.com/correounivalle.edu.co/guia-algortimos-industrial/home \"Ir a la Guía de implementación de algoritmos de ingeniería industrial\") de la Universidad valle, Cali, Colombia. \n",
     "\n",
     "Para mayor información sobre el lenguaje, su historia, su filosofía y su creador lo invito a consultar recursos como:\n",
     "\n",
@@ -59,9 +59,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para poder empezar a programar con el lenguaje Python, se debe descargar un intérprete del lenguaje y un IDE (Integrated Development Environment, Entorno Integrado de Desarrollo), a continuación, se mostrarán dos formas comunes para hacerlo.\n",
+    "Para poder empezar a programar con el lenguaje Python, se debe descargar un intérprete del lenguaje y un IDE (Integrated Development Environment, Entorno Integrado de Desarrollo), a continuación, se mostrarán dos formas más comunes para hacerlo.\n",
     "\n",
-    "###### **Nota:** Recomiendo instalar el administrador de paquetes Anaconda, porque no hay necesidad de instalar módulos aparte."
+    "###### **Nota:** Recomiendo instalar el administrador de paquetes y entornos Anaconda, porque tien no hay necesidad de instalar módulos aparte."
    ]
   },
   {
@@ -89,7 +89,7 @@
     "\n",
     "En este momento la versión vigente es la 3.8.0. Verá que en muchos casos aún ofrecen instaladores y otros recursos para Python 2.7. La razón es que existen muchos programas escritos en versiones anteriores, entonces aún se presta soporte para ellas. Sin embargo, el desarrollo y soporte para Python 2.7 se detendrá paulatinamente, y todos los sistemas migrarán a la versión más actualizada. **Por ello para el desarrollo de la guía utilizaremos Python 3.x**.\n",
     "\n",
-    "Tenga en cuenta que la instalación de esta opción es más rápida que la opción 2, sin embargo, solo tendrá preinstalados los módulos básicos, así que en el momento de ser requeridos otros módulos, estos deberán ser instalados por medio del administrador de paquetes **pip**, cuyo método es diferente en cada sistema operativo, en esta guía solamente se explicarán los pasos para la [instalación en **Windows** y en **Linux**](1-3_Algunos-IDE/1-3-1_IDLE/1-3-1_IDLE.ipynb#1.3.1.4_Instalacion-de-Modulos \"Ir al apartado de Instalación de módulos\")"
+    "Tenga en cuenta que la instalación de esta opción es más rápida que la opción 2, sin embargo, solo tendrá preinstalados los módulos de la [libreria estándar](../9_Modulos/9_Modulos_y_Paquetes.ipynb#9.3_Libreria-Estandar \"Ir al apartado 9.3. Libreria Estandar\"), así que en el momento de ser requeridos otros módulos, estos deberán ser instalados por medio del administrador de paquetes **pip**, en esta guía se explicarán los pasos para la [instalación en Windows](../9_Modulos/9_Modulos_y_Paquetes.ipynb#9.4.1_Instalacion-de-Paquetes \"Ir al apartado 9.4.1. Instalacion de Paquetes\")."
    ]
   },
   {
