--- a/2_Elementos_Basicos/2_4_Programas_en_Python/2_4_Programas_en_Python.ipynb
+++ b/2_Elementos_Basicos/2_4_Programas_en_Python/2_4_Programas_en_Python.ipynb
@@ -41,7 +41,7 @@
     "> **Algorithms** describe the solution to a problem in terms of the data needed to represent the problem instance and the set of steps necessary to produce the intended result. [(Miller & Ranum, 2018)](https://runestone.academy/runestone/books/published/pythonds/index.html 'Miller, B & Ranum D. (2018). Problem Solving with Algorithms and Data Structures using Python')\n",
     ">###### (Los algoritmos describen la solución de un problema en términos de los datos necesarios para representar la instancia del problema y el conjunto de pasos necesarios para conseguir el resultado deseado)  \n",
     "\n",
-    "En resumen, para efectos prácticos de esta guía, Python es solo un lenguaje de programación, es decir, un lenguaje común entre el programador y la computadora, con el cual se escriben las instrucciones para que puedan ser ejecutadas; al conjunto de aquellas instrucciones lo llamamos algoritmo y al proceso de escribirlo con Python lo llamamos programar."
+    "En resumen, para efectos prácticos de esta guía Python es solo un lenguaje de programación, es decir, un lenguaje común entre el programador y la computadora, con el cual se escriben las instrucciones para que puedan ser ejecutadas, al conjunto de aquellas instrucciones se les llama algoritmo y al proceso de escribirlo con Python se le llama programar."
    ]
   },
   {
@@ -55,11 +55,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Antes empezar a programar se recomienda realizar un análisis previo del problema que permita esquematizarlo, en términos de objetivo, entradas, salidas, y algoritmo, con el fin de tener una guía estructurada que facilite la programación ya sea con Python o con otro lenguaje.\n",
+    "Antes empezar a programar se recomienda realizar un análisis previo del problema que permita esquematizarlo en términos de objetivo, entradas, salidas, y algoritmo, con el fin de tener una guía estructurada que facilite la programación ya sea con Python o con otro lenguaje.\n",
     "\n",
-    "A continuación se describirá cada paso del análisis de un programa sencillo que calcule raíces cuadradas y una recopilación de [preguntas guía](#Preguntas-guia \"Ir al apartado de preguntas guía\") que serán de ayuda en esta estapa.\n",
-    "\n",
-    "###### **Nota:** Por fines didácticos y por buenas prácticas de documentación, cada ejemplo tendrá un análisis, aunque no tengan un nivel de complejidad que lo amerite."
+    "A continuación se describirá cada paso del análisis de un programa sencillo que calcule raíces cuadradas y una recopilación de [preguntas guía](#Preguntas-guia \"Ir al apartado de preguntas guía\") que serán de ayuda en esta estapa."
    ]
   },
   {
@@ -78,7 +76,7 @@
    "source": [
     "### 2.4.1.2. Entradas <a id='2.4.1.2_Entradas'></a>\n",
     "\n",
-    "Definir que información se ingresará al programa y en que tipo de variable debe almacenarse para ser procesada adecuadamente, tenga en cuenta que, normalmente la información ingresa como texto, pero para procesarse se deben cambiar a `integer` o `float`.\n",
+    "Definir que información se ingresará al programa y en que tipo de variable y [estructura de datos](../5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5_Estructura-de-Datos-Basicas) debe almacenarse para ser procesada adecuadamente, tenga en cuenta que, normalmente la información ingresa como texto, pero para procesarse se deben cambiar a `integer` o `float`.\n",
     "\n",
     "También es recomendable en esta estapa defnir los nombres que estas variables van a tener en el código.\n",
     "\n",
@@ -131,20 +129,49 @@
    "source": [
     "### 2.4.1.5. Pseudocódigo <a id='2.4.1.5_Pseudocodigo'></a>\n",
     "\n",
-    "El pseudocódigo es la secuencia de pasos detallados donde adecuamos el algoritmo a términos cercanos al lenguaje de programación que vayamos a utilizar, pero que cualquier persona lo pueda entender, es casi como un código, pero sin sintaxi del lenguaje.\n",
+    "El pseudocódigo es la secuencia de pasos detallados donde se escribe el algoritmo a términos cercanos al lenguaje de programación que se va a utilizar, para que cualquier persona lo pueda entender, es casi como un código, pero sin la sintaxis del lenguaje.\n",
     "\n",
-    "Una de las grandes ventajas de Python, es que, si hemos realizado bien el pseudocódigo, el programa es prácticamente igual, solo que en inglés. \n",
+    "Una de las grandes ventajas de Python, es que, si se realiza bien el pseudocódigo, el programa es prácticamente igual, solo que en inglés. \n",
     "\n",
     "Para hacer el pseudocódigo se debe:\n",
     "\n",
-    "- Definir el o los tipos de estructura de datos donde vamos a almacenar la información, por ejemplo, variables individuales, listas, listas anidadas, diccionarios, tuplas, matrices...\n",
+    "- Definir el o los tipos de [estructura de datos](../5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5_Estructura-de-Datos-Basicas) donde se va almacenar la información, por ejemplo, variables individuales, listas, listas anidadas, diccionarios, tuplas, matrices...\n",
     "\n",
     "- Definir las variables de operación con su respectivo tipo, y con las variables de entrada y salida, en caso de no haberlo hecho en los pasos anteriores.\n",
     "\n",
     "###### **Nota:** Las variables de operación, son las variables internas con las cuales vamos a realizar las operaciones del algoritmo, hay casos en las que estas son las mismas que las de entrada.\n",
     "\n",
-    "- Definir pasos y cálculos necesarios para resolver el problema como lo haríamos en el código, recuerde que se debe ser lo más específico posible, porque estas son las instrucciones que va a recibir la computadora, para realizar esta etapa es conveniente estructurar el programa en varias secciones, como se propone mas adelante.\n",
+    "- Definir pasos y cálculos necesarios para resolver el problema como lo se haría en el código, recuerde que se debe ser lo más específico posible, porque estas son las instrucciones que va a recibir la computadora. \n",
     "\n",
+    "Para realizar esta etapa es conveniente estructurar el programa en varias secciones, como se propone a continuación."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Estructura del programa <a id='Estructura'></a>\n",
+    "\n",
+    "Normalmente estructuro el programa en los siguientes pasos, aunque claramente no es una camisa de fuerza y puede cambiar dependiendo del tipo de programa, me gusta organizar las secciones de esta manera, ya que, me facilita el proceso de lectura, pruebas y depuración del código.\n",
+    "\n",
+    "-2. Importar de módulos / Import Statements   \n",
+    "-1. Definir de funciones auxiliares/ Helper Functions    \n",
+    "0. Programa principal / Main program     \n",
+    "\n",
+    "        1. Ingreso - lectura y almacenamiento de datos\n",
+    "        2. Procesamiento o caja negra. (Los pasos del algoritmo)\n",
+    "            ...\n",
+    "            n. Impresión- almacenamiento de resultados.  \n",
+    "        \n",
+    "(n+1). Ejecutar.\n",
+    "\n",
+    "###### **Nota:** Cuando se manejan bucles donde haya interacción con el usuario, se suele presentar una mezcla entre las partes del programa principal, como vio en ejemplo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     ">**Ej:**\n",
     "```python\n",
     "\"\"\"\n",
@@ -164,28 +191,6 @@
     "6. Ejecutar programa principal. \n",
     "\"\"\"\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### - Estructura del programa <a id='Estructura'></a>\n",
-    "\n",
-    "Normalmente estructuro el programa en los siguientes pasos, aunque claramente no es una camisa de fuerza y puede cambiar dependiendo del tipo de programa, me gusta organizar las secciones de esta manera, ya que, me facilita el proceso de lectura, pruebas y depuración del código.\n",
-    "\n",
-    "-2. Importar de módulos / Import Statements\n",
-    "-1. Definir de funciones auxiliares/ Helper Functions\n",
-    "0. Programa principal / Main program\n",
-    "\n",
-    "        1. Ingreso - lectura y almacenamiento de datos\n",
-    "        2. Procesamiento o caja negra. (Los pasos del algoritmo)\n",
-    "            ...\n",
-    "            n. Impresión- almacenamiento de resultados.  \n",
-    "        \n",
-    "(n+1). Ejecutar.\n",
-    "\n",
-    "###### **Nota:** Cuando se manejan bucles donde haya interacción con el usuario, se suele presentar una mezcla entre las partes del programa principal, como vio en ejemplo."
    ]
   },
   {
@@ -218,21 +223,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los programas en Python son archivos de texto plano, que se graban con la extensión .py. Estos programas pueden crearse desde cualquier editor de texto plano, pero los IDE para Python tienen tiene varias funcionalidades que facilitan escribir código con este lenguaje, como se describen en el apartado `*`[1.3. Algunos IDE](../../1_Introduccion/1-3_Algunos-IDE/1-3-1_IDLE/1-3-1_IDLE.ipynb#1.3_Algunos-IDE).\n",
+    "Los programas en Python son archivos de texto plano, que se graban con la extensión .py, pueden crearse desde cualquier editor de texto plano, pero los IDE para Python tienen varias funcionalidades que facilitan escribir el código, como se describen en el apartado `*`[1.3. Algunos IDE](../../1_Introduccion/1-3_Algunos-IDE/1-3-1_IDLE/1-3-1_IDLE.ipynb#1.3_Algunos-IDE).\n",
     "\n",
-    "Al momento de enfrentarnos con un problema complejo, se debe tener en cuenta que:\n",
+    "Al momento de enfrentar un problema complejo, se debe tener en cuenta que:\n",
     "\n",
-    "- Tener un ejercicio pequeño ya resuelto, para crear un set de datos de prueba y poder verificar los resultados a medida que terminemos una sección grande, creemos funciones auxiliares, o para hacer pruebas unitarias con el módulo unittest.\n",
+    "- Tener por lo menos un ejercicio pequeño ya resuelto, para crear un set de datos de prueba y poder verificar los resultados a medida que se termine una sección grande, se cree funciones auxiliares, o para hacer pruebas unitarias con el módulo unittest.\n",
     "\n",
     "- Bautizar las variables de tal manera que sean explicativas por sí mismas, y usar un estándar para bautizarlas, con el fin de mejorar la legibilidad del código y en caso de que se quiera publicar en un foro lo mejor es nombrar las variables en inglés.\n",
     "\n",
-    "- Hacer uso de los comentarios, sobretodo explicando bloques de código que puedan ser complejos, recuerde que un buen código es el que se puede leer fácilmente, sobre todo cuando lo retomamos después de un tiempo o cuando es un proyecto colaborativo.\n",
+    "- Hacer uso de los comentarios, sobretodo explicando bloques de código que puedan ser complejos, recuerde que un buen código es el que se puede leer fácilmente, sobre todo cuando lo se retoma después de un tiempo o cuando se trabaja en un proyecto colaborativo.\n",
     "\n",
-    "- Si no tenemos idea de cómo abordar el problema, plantear el algoritmo o alguna parte en específico del código, la forma más rápida es plantearle la duda a google y si no hay nada relacionado, postearlo en un foro.\n",
+    "- Si no se teiene idea de cómo abordar el problema, plantear el algoritmo o alguna parte en específico del código, la forma más rápida de enocntra la solución es busarcar en google o postearlo en un foro de la comunidad.\n",
     "\n",
     "###### **Nota:** Una de las grandes ventajas de Python es que tiene una comunidad cooperativa enorme trabajando en proyectos open source y activa en foros.\n",
     "\n",
-    "A continuación, se muestra el código de la Calculadora de raíces cuadradas, en cual veremos cómo pasar del [pseudocódigo](#2.4.1.5_Pseudocodigo \"Ir al apartado del pseudocódigo\") al código en Python, y se explicarán cada uno de las secciones."
+    "A continuación, se muestra el código de la Calculadora de raíces cuadradas, en cual se mostrará cómo pasar del [pseudocódigo](#2.4.1.5_Pseudocodigo \"Ir al apartado del pseudocódigo\") al código en Python, y se explicará sus partes más importantes."
    ]
   },
   {
@@ -298,9 +303,9 @@
    "metadata": {},
    "source": [
     "### 2.4.2.1. Import Statements  <a id='2.4.2.1_Import-Statements'></a>\n",
-    "En muchas ocasiones necesitaremos importar módulos del lenguaje que no se ejecutan por defecto. En este ejemplo usamos el módulo `math`, que tiene funciones matemáticas más allá de las más básicas como la raíz cuadrada. \n",
+    "En muchas ocasiones será necesario importar [módulos](9_Modulos/9_Modulos_y_Paquetes.ipynb#9_Modulos_y_Paquetes \"Ir al capítulo 9. Módulos.\") del lenguaje que no se ejecutan por defecto. En este ejemplo se usa el módulo `math`, que tiene funciones matemáticas más allá de las más básicas como la raíz cuadrada. \n",
     "\n",
-    "Como práctica, en la siguiente bloque ejecute los siguientes comandos, para ver los métodos que el módulo `math` nos aporta y la [ayuda](../../2_Elementos_Basicos/2_Elementos_Basicos.ipynb#2.3_Ayuda-y-Directorio \"Ir al apartado 2.3 Ayuda y Directorio\") para la función de la raíz cuadrada.  \n",
+    "Como práctica en el siguiente bloque ejecute los siguientes comandos para ver los métodos que el módulo `math` conitene y la [ayuda](../../2_Elementos_Basicos/2_Elementos_Basicos.ipynb#2.3_Ayuda-y-Directorio \"Ir al apartado 2.3 Ayuda y Directorio\") para la función de la raíz cuadrada.  \n",
     "\n",
     "```python\n",
     ">>> import math\n",
@@ -315,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Escriba aquí:\n"
+    "## Escriba aquí:"
    ]
   },
   {
@@ -323,18 +328,18 @@
    "metadata": {},
    "source": [
     "### 2.4.2.2. Helper Functions  <a id='2.4.2.2_Helper-Functions'></a>\n",
-    "En esta sección ubicamos todas las funciones que harán tareas específicas para el cuerpo principal del programa. En este caso tenemos una función, que toma como entrada el parámetro `n` y devuelve como resultado la variable raiz que ha sido calculada.  \n",
+    "En esta sección se ubica todas las [funciones](../../6_Funciones/6_Funciones.ipynb#6_Funciones \"Ir al capítulo 6. Funciones\") que harán tareas específicas para el cuerpo principal del programa. En este caso se tiene una función, que toma como entrada el parámetro `n` y devuelve como resultado la variable raiz que ha sido calculada.  \n",
     "~~~python\n",
     "def raiz_cuadrada(number):\n",
     "    raiz = math.sqrt(number)\n",
     "\n",
     "    return raiz \n",
     "~~~\n",
-    "La primera línea de la función inicia con la palabra clave `def` (quiere decir que vamos a definir la función), seguida del nombre de la función y paréntesis. Dentro de los paréntesis especificamos los parámetros de la función, es decir, los valores que debe recibir para hacer su tarea. Si **no** son necesarios los parámetros, los paréntesis estarán vacíos ( ). Terminamos la primera línea con `:`\n",
+    "La primera línea de la función inicia con la palabra clave `def` (quiere decir que se va a definir la función), seguida del nombre de la función y paréntesis. Dentro de los paréntesis se especifica los parámetros de la función, es decir, los valores que debe recibir para hacer su tarea. Si **no** son necesarios los parámetros, los paréntesis estarán vacíos ( ). Se termina la primera línea con `:`\n",
     "\n",
-    "La segunda línea está [indentada](../../3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb#3.1.1.1_Indentacion \"¿Por qué la identación en Python es muy importante?\") cuatro espacios, y es la que ejecuta la operación matemática. A la variable `raíz` le asignamos la raíz cuadrada de number.\n",
+    "La segunda línea está [indentada](../../3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb#3.1.1.1_Indentacion \"¿Por qué la identación en Python es muy importante?\") cuatro espacios, y es la que ejecuta la operación matemática. A la variable `raíz` se le asigna la raíz cuadrada de number.\n",
     "\n",
-    "La última línea empieza con la palabra clave `return`. En esta especificamos que la función retornará el valor de la variable `raíz` a la parte del programa que la haya llamado."
+    "La última línea empieza con la palabra clave `return`. En esta se especifica que la función retornará el valor de la variable `raíz` a la parte del programa que la haya llamado."
    ]
   },
   {
@@ -346,9 +351,9 @@
     "\n",
     "Siguiendo la ejecución de nuestro pequeño programa de ejemplo, la primera acción es presentar en pantalla el anuncio *'CALCULO DE RAICES CUADRADAS'*. La segunda línea toma en la variable `veces` el valor que el usuario digite, después de presentar en pantalla la pregunta: *'Cuantas raíces cuadradas va a calcular?:'*. Como el valor almacenado en la variable `veces` es una variable de texto en la siguiente línea convertimos ese valor en un número entero y lo almacenamos en la variable `times`.\n",
     "\n",
-    "Justo después encontramos un `*`[bloque de repetición for]()`*`, en el que usamos la variable `times` para indicarle al ciclo cuantas veces se debe ejecutar. Observemos que todo el bloque de instrucciones que deben repetirse bajo el control del for está indentado cuatro espacios debajo de la palabra clave for. \n",
+    "Justo después encontramos un [bloque de repetición for](../../4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#4.2.1_Bloque-for), en el que usamos la variable `times` para indicarle al ciclo cuantas veces se debe ejecutar. Observemos que todo el bloque de instrucciones que deben repetirse bajo el control del for está indentado cuatro espacios debajo de la palabra clave for. \n",
     "\n",
-    "De aquí en adelante ustedes pueden descifrar fácilmente qué hace el resto del programa."
+    "De aquí en adelante pueden descifrar fácilmente qué hace el resto del programa."
    ]
   },
   {
@@ -358,7 +363,7 @@
     "<a id='2.4.2.4_Ejecutar'></a>\n",
     "### 2.4.2.4. Ejecutar\n",
     "\n",
-    "En esta sección declaramos que al ejecutar el archivo **Ejemplo-1_Calculadora-de-raices**, la función que controlará la ejecución de todo el archivo será aquella cuyo nombre sea main, es decir, el programa principal."
+    "En esta sección se declara que al ejecutar el archivo **Ejemplo-1_Calculadora-de-raices**, la función que controlará la ejecución de todo el archivo será aquella cuyo nombre sea main, es decir, el programa principal."
    ]
   },
   {
