Material de apoyo RPW, MST, Dijkstra
Se incluye el material de apoyo del los algoritmos Dijkstra, MST, y RPW, también se crea el encabezado, y se agrega explicación de la estructura de datos sets

--- a/10_Laboratorios/10_Laboratorios.ipynb
+++ b/10_Laboratorios/10_Laboratorios.ipynb
@@ -4,29 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 10. Laboratorios <a id='10_Laboratorios'></a>"
+    "![Fig3_Encabezado.png](../Fig3_Encabezado.png)\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "## Quinto semestre:\n",
-    "#### - [Algoritmo Dijkstra - Ruta más corta](Dijkstra/Dijkstra.ipynb)\n",
-    "#### - [MST - Minimun Spanning Tree](MST/MST.ipynb)\n",
-    "#### - [RPW - Ranked Positional Weight](RPW/RPW.ipynb)\n",
+    "# **10. Laboratorios** <a id='10_Laboratorios'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quinto semestre:\n",
+    "- [Algoritmo Dijkstra - Ruta más corta](Dijkstra/Dijkstra.ipynb)\n",
+    "- [MST - Minimun Spanning Tree](MST/MST.ipynb)\n",
+    "- [RPW - Ranked Positional Weight](RPW/RPW.ipynb)\n",
     "\n",
-    "## Sexto semestre:\n",
-    "#### - [AHP - Analytic Hierarchy Process](AHP/AHP.ipynb)\n",
-    "#### - [Detección Proceso Fuera de Control](Deteccion_FControl/Deteccion_FControl.ipynb)\n",
-    "#### - [Gráficos de Control](Graficos_de_Control/Graficos_de_Control.ipynb)\n",
-    "#### - [Tabla de Frecuencias](Tabla_de_Frecuencias/Tabla_de_Frecuencias.ipynb)   \n",
+    "### Sexto semestre:\n",
+    "- [AHP - Analytic Hierarchy Process](AHP/AHP.ipynb)\n",
+    "- [Detección Proceso Fuera de Control](Deteccion_FControl/Deteccion_FControl.ipynb)\n",
+    "- [Gráficos de Control](Graficos_de_Control/Graficos_de_Control.ipynb)\n",
+    "- [Tabla de Frecuencias](Tabla_de_Frecuencias/Tabla_de_Frecuencias.ipynb)   \n",
     "\n",
-    "## Octavo semestre:\n",
-    "#### - [BOA - Binary Ordering Algorithm](BOA/BOA.ipynb)\n",
-    "#### - [Minimax Rectilíneo - Facility Location](Minimax_Rectilineo/Minimax_Rectilineo.ipynb)  \n",
-    "#### - [Minisum Rectilíneo - Facility Location](Minisum_Rectilineo/Minisum_Rectilineo.ipynb) \n",
+    "### Octavo semestre:\n",
+    "- [BOA - Binary Ordering Algorithm](BOA/BOA.ipynb)\n",
+    "- [Minimax Rectilíneo - Facility Location](Minimax_Rectilineo/Minimax_Rectilineo.ipynb)  \n",
+    "- [Minisum Rectilíneo - Facility Location](Minisum_Rectilineo/Minisum_Rectilineo.ipynb) \n",
     "\n",
     "\n",
     "---"
