--- a/10_Laboratorios/RPW/Plantilla/F_Auxiliares/_b_sucesoras.ipynb
+++ b/10_Laboratorios/RPW/Plantilla/F_Auxiliares/_b_sucesoras.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Fig3_Encabezado.png](../../../../Fig3_Encabezado.png)\n",
+    "\n",
+    "---------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## b. Identificar sucesoras (sucesoras)\n",
     "\n",
     "- #### **Objetivo :**\n",
@@ -76,8 +85,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- [Almacenamiento de datos](../../../../../7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#Min-eje_A_Archivo_i1.txt \"Ir al capítulo de Lectura de archivos\")\n",
-    "- [Manejo de listas y tuplas](../../../../../5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5_Estructura-de-Datos-Basicas \"Ir al capítulo de Estructuras de datos\")"
+    "- [Cíclo for](../../../../4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#BloqueFor \"Ir a subcapítulo Cíclo For Secciones del capítulo de Bucles e Iterables\")\n",
+    "\n",
+    "- [Estructuras de decisión](../../../../3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb#3_Estructuras_Logicas \"Ir al capítulo de Estructuras de decisión\")\n",
+    "\n",
+    "- [Funciones recursivas](../../../../6_Funciones/6_Funciones.ipynb#Recursivas \"Ir al subcapítulo de Funciones recursivas del capítulo Funciones\")\n",
+    "\n",
+    "- [Cojuntos](../../../../5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#Sets \"Ir al subcapítulo Cojuntos del capítulo de Estructuras de datos\")\n",
+    "\n",
+    "- [Ordenar de listas](../../../../5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#Orden \"Ir a la sección Métodos de orden de listas del capítulo de Estructuras de datos\")"
    ]
   },
   {
