--- a/10_Laboratorios/RPW/Plantilla/Plantilla_RPW.ipynb
+++ b/10_Laboratorios/RPW/Plantilla/Plantilla_RPW.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Fig3_Encabezado.png](../../../Fig3_Encabezado.png)\n",
+    "\n",
+    "---------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Plantilla - RPW <a id=\"plantilla\"></a>"
    ]
   },
@@ -59,7 +68,7 @@
    "metadata": {},
    "source": [
     "<a id='ruta'></a>\n",
-    "#### d. Organizar las estaciones ([estaciones](F_Auxiliares/_d_estaciones_rpw.ipynb \"Ir a la plantilla de estaciones\"))"
+    "#### d. Organizar las estaciones ([estaciones](F_Auxiliares/_d_estaciones.ipynb \"Ir a la plantilla de estaciones\"))"
    ]
   },
   {
