--- a/5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb
+++ b/5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb
@@ -33,7 +33,7 @@
     ">[5.2.1. Conversión a Lista](#5.2.1_Conversion-a-Lista)\n",
     "\n",
     "### [5.3. Diccionarios](#5.3_Diccionarios)   \n",
-    ">[5.3.1. Métodos de los Diccionarios](#5.1.3_Metodos-de-los-Diccionarios)  "
+    ">[5.3.1. Métodos de los Diccionarios](#5.3.1_Metodos-de-los-Diccionarios)  "
    ]
   },
   {
@@ -75,6 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Listas'></a>\n",
     "## 5.1.1. Métodos de las Listas <a id='5.1.1_Metodos-de-las-Listas'></a>\n",
     "Al ser un iterable como un string, en las listas el [manejo de los índices](../4_Bucles-e-Iterables/4_Bucles-e-Iterables.ipynb#4.1.2_Indices \"Ir al apartado 4.1.2_Índices\") y los [métodos báiscos](../4_Bucles-e-Iterables/4_Bucles-e-Iterables.ipynb#4.1.1_Metodos-Basicos \"Ir al apartado 4.1.1 Metodos Básicos\") que se vió en el capitulo anterior (`len`, `count`, e `index`) son iguales, sin embargo, una de las grandes ventajas que tienen las listas es que son objetos mutables, es decir, que se puede cambiar, adicionar, eliminar y ordenar sus elementos, en los siguientes puntos se enseñaran los métodos que permiten hacerlo. <a id='Min-eje_Cambio-de-Elementos'></a>\n",
     "\n",
@@ -351,6 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Orden'></a>\n",
     "### 5.1.1.3. Métodos de Orden <a id='5.1.1.3_Metodos-de-Orden'></a>"
    ]
   },
@@ -755,6 +757,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Arboles'></a>\n",
     "### 5.1.3.4 Árboles <a id='5.1.3.4_Arboles'></a>\n",
     "\n",
     "Con las listas de orden n se pueden crear esctructuras como árboles o pirámides, el siguiente Mini_Ejemplo muestra una estructura, con listas de cuarto orden, con la cual se emula una estructura de árbol, con la información de tres personas, como muestra el siguiente diagrama.\n",
@@ -920,8 +923,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.3.1. Métodos de los Diccionarios <a id='5.1.3_Metodos-de-los-Diccionarios'></a>\n",
-    "A continuación están los métodos principales de los diccinarios.\n",
+    "<a id='MDic'></a>\n",
+    "## 5.3.1. Métodos de los Diccionarios \n",
+    "A continuación están los métodos principales de los diccinarios. <a id='5.3.1_Metodos-de-los-Diccionarios'></a>\n",
     "\n",
     "- **dict( ):** <a id='Min-eje_dic'></a>\n",
     "Es una función que recibe como parámetro una representación de un diccionario, y si es válida, devuelve un diccionario de datos.\n",
@@ -1179,6 +1183,37 @@
    "outputs": [],
    "source": [
     "# Pase aquí el mini ejemplo anterior"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Sets'></a>\n",
+    "## **5.4. Conjuntos** <a id='5.4_Conjuntos'></a>\n",
+    "\n",
+    "Los conjuntos o sets son estructuras de datos en los que se puede almacenar elementos únicos, es decir, un conjunto no puede tener un elemento más de una vez, al igual que las listas puede contener diferentes objetos juntos, sin embargo, no puede otros conjuntos u objtos mutalbes como listas, diccionarios. \n",
+    "\n",
+    "Para el desarrollo de la guía solo es necesario saber como convertir una lista a un set, por lo tanto, si necesita conocer los métodos, funciones y operaciones dirijase a la documentación [aquí](https://docs.python.org/3/tutorial/datastructures.html#sets).\n",
+    "\n",
+    "Otra diferencia importante de los conjuntos es que no se pueden recorrer con un cíclo for ni se puede recuperar alguno de sus elementos con índices, generando un ' TypeError: 'set' object is not subscriptable '.\n",
+    "\n",
+    "Al igual que con los diccionarios los sets se crean con corchetes, lo que los diferencia es el uso de puntos. En el siguiente ejemplo muestra cómo crea un set desde 0 y otro a partir de una lista. <a id='Min-eje_Sets'></a>\n",
+    "\n",
+    "~~~python\n",
+    "# Mini_Ejemplo: Sets\n",
+    "\n",
+    "set_1={'mariquita', 'insecto', 2, True, list, (6, 4)}\n",
+    "\n",
+    "print(\"El set no. 1 es:\",set_1, \"no necesariamente tiene el mismo orden en el que se creó\\n\")\n",
+    "\n",
+    "lista=[1, 2, 1, 3, 1, 4, 2, 3, 4, 5, 6]\n",
+    "\n",
+    "set_2=set(lista)\n",
+    "\n",
+    "print(\"La lista\",str(lista),\"cuando se convierte a set, no tiene elementos repetidos\", set_2,\"\\n\")\n",
+    "\n",
+    "~~~"
    ]
   },
   {
